Set shrink property to 0 to prevent collapse

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -36,6 +36,7 @@ body {
   align-items: center;
   justify-content: center;
   margin:10px;
+  flex-shrink: 0;
 }
 
 .close-button {
